--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1736,12 +1736,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-02 10:39:17'
-    modifiedAt: '2023-05-04 14:58:21'
+    modifiedAt: '2023-05-04 16:18:14'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F0005_41
       - datasets/DS_JDE_01_F4101
-      outputs: []
+      outputs:
+      - datasets/MD_MATL
     subgraphs: []
     dependencies: {}
 datasets:
@@ -2890,7 +2891,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-01 15:44:43'
+    modifiedAt: '2023-05-04 15:57:09'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
