--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -618,14 +618,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_SUP_7:
-    name: MD_SUP_7_atlas
-    description: Mapping pipeline  ['atlas']
+    name: MD_SUP_7_atl
+    description: Mapping pipeline  ['atl']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-04 15:57:34'
+    modifiedAt: '2023-05-04 16:21:46'
     datasets:
       inputs: []
       outputs:
