--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7958,6 +7958,7 @@ jobs:
     - pipelines/MD_SUP_1
     - pipelines/MD_SUP_10
     - pipelines/MD_SUP_6
+    - pipelines/MD_SUP_13
     - pipelines/MD_SUP_7
     - pipelines/MD_SUP_3
     - pipelines/MD_SUP_8
@@ -7970,7 +7971,7 @@ jobs:
       clusterId: null
     enabled: false
     createdAt: '2023-04-26 17:13:45'
-    modifiedAt: '2023-05-04 15:19:20'
+    modifiedAt: '2023-05-04 17:52:01'
     author: skostadi@its.jnj.com
 functions:
   author: null
