--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7973,6 +7973,31 @@ jobs:
     createdAt: '2023-04-26 17:13:45'
     modifiedAt: '2023-05-04 17:52:01'
     author: skostadi@its.jnj.com
+  jobs/job_md_sup_hm2:
+    name: job_md_sup_hm2
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/MD_SUP_11
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-04 17:53:47'
+    modifiedAt: '2023-05-04 17:54:22'
+    author: fsano1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
