JEKT-1421 ❇️ New     - Job        - JOB_MD_DOC_ITM_INCM_INVC_HM2
🔁 Modified
    - Pipeline
       - sap_md_doc_itm_incm_invc_hm2_hmd_bba_bbl_bbn_geu_mrs_po1_tai
    - Job
       - JOB_MD_DOC_ITM_INCM_INVC

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1590,14 +1590,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/SAP_RSEG:
-    name: sap_md_doc_itm_incm_invc_hm2_bba_bbl_bbn_geu_mrs_po1_tai
+    name: sap_md_doc_itm_incm_invc_hm2_hmd_bba_bbl_bbn_geu_mrs_po1_tai
     description: ''
     author: jcacere7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 18:25:43'
-    modifiedAt: '2023-05-04 00:35:06'
+    modifiedAt: '2023-05-04 20:16:40'
     datasets:
       inputs:
       - datasets/DS_SAP_RSEG
@@ -7304,7 +7304,32 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-04-26 20:30:55'
-    modifiedAt: '2023-05-03 00:04:05'
+    modifiedAt: '2023-05-04 20:14:32'
+    author: jcacere7@its.jnj.com
+  jobs/JOB_MD_DOC_ITM_INCM_INVC_HM2:
+    name: JOB_MD_DOC_ITM_INCM_INVC_HM2
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_RSEG
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-04 20:15:46'
+    modifiedAt: '2023-05-04 20:16:19'
     author: jcacere7@its.jnj.com
 functions:
   author: null
