--- a/src/datasets/MD_BILL_DOC_HDR/pbt_aspects.yml
+++ b/src/datasets/MD_BILL_DOC_HDR/pbt_aspects.yml
@@ -100,6 +100,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: SHIP_TO
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: CRT_DTTM
     type: timestamp
     nullable: true
@@ -410,6 +417,20 @@ schema:
       tags: []
   - name: NUM_OF_PG
     type: integer
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PSTNG_BILL_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: INVC_LIST_STS_CD
+    type: string
     nullable: true
     metadata:
       description: ''
