--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1727,7 +1727,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-01 19:17:50'
-    modifiedAt: '2023-05-04 19:38:18'
+    modifiedAt: '2023-05-04 21:19:00'
     datasets:
       inputs:
       - datasets/DS_SAP_01_T001
@@ -1739,6 +1739,7 @@ pipelines:
       - datasets/DS_SAP_01_TVFST
       - datasets/DS_SAP_01_TVKOT
       - datasets/DS_SAP_01_TVLST
+      - datasets/DS_SAP_01_TVSBT
       - datasets/DS_SAP_01_TVTWT
       - datasets/DS_SAP_01_TVV1T
       - datasets/DS_SAP_01_TVV2T
@@ -6620,6 +6621,21 @@ datasets:
         author: lsorarra@its.jnj.com
         createdAt: '2023-05-02 14:38:48'
         modifiedAt: '2023-05-02 14:38:48'
+  datasets/DS_SAP_01_TVSBT:
+    name: DS_SAP_01_TVSBT
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-05-04 21:12:24'
+    modifiedAt: '2023-05-04 21:12:24'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-05-04 21:12:24'
+        modifiedAt: '2023-05-04 21:12:24'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
