--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1682,7 +1682,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-26 13:16:10'
-    modifiedAt: '2023-05-05 01:26:59'
+    modifiedAt: '2023-05-05 01:54:52'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F0101
@@ -7479,6 +7479,31 @@ jobs:
     enabled: null
     createdAt: '2023-04-19 05:06:58'
     modifiedAt: '2023-04-19 12:41:18'
+    author: jcacere7@its.jnj.com
+  jobs/JOB_MD_CUST:
+    name: JOB_MD_CUST
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/JDE_01_MD_CUST
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-05 01:33:52'
+    modifiedAt: '2023-05-05 01:39:21'
     author: jcacere7@its.jnj.com
 functions:
   author: null
