JEKT-1367 🔁 Modified     - Pipeline        - JDE_01_MD_CUST_GMD_MTR_BW2_JES_JSW_JET_SJD_DJD_JEM_DEU

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1675,14 +1675,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/JDE_01_MD_CUST:
-    name: JDE_01_MD_CUST
+    name: JDE_01_MD_CUST_GMD_MTR_BW2_JES_JSW_JET_SJD_DJD_JEM_DEU
     description: ''
     author: hgermi1@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 13:16:10'
-    modifiedAt: '2023-05-05 02:14:17'
+    modifiedAt: '2023-05-05 02:24:24'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F0101
