JEKT-1209 Created BW2 Pipeline and datasets unique to BW2 for the MD_MATL object ❇️ New     - Dataset        - DS_JDE_01_F4104        - DS_JDE_01_F6060002     - Pipeline        - JDE_BW2_MD_MATL
🔁 Modified
    - Pipeline
       - JDE_MD_MATL

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1736,11 +1736,30 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-02 10:39:17'
-    modifiedAt: '2023-05-05 07:55:53'
+    modifiedAt: '2023-05-05 08:01:19'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F0005_41
       - datasets/DS_JDE_01_F4101
+      outputs:
+      - datasets/MD_MATL
+    subgraphs: []
+    dependencies: {}
+  pipelines/JDE_BW2_MD_MATL:
+    name: JDE_BW2_MD_MATL
+    description: MD_MATL For JDE systems
+    author: natkins7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-05 08:03:11'
+    modifiedAt: '2023-05-05 08:22:09'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_01_F0005_41
+      - datasets/DS_JDE_01_F4101
+      - datasets/DS_JDE_01_F4104
+      - datasets/DS_JDE_01_F6060002
       outputs:
       - datasets/MD_MATL
     subgraphs: []
@@ -6494,6 +6513,36 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-05-03 12:34:47'
         modifiedAt: '2023-05-03 12:34:47'
+  datasets/DS_JDE_01_F4104:
+    name: DS_JDE_01_F4104
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-05-05 08:11:29'
+    modifiedAt: '2023-05-05 08:11:29'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-05-05 08:11:29'
+        modifiedAt: '2023-05-05 08:11:29'
+  datasets/DS_JDE_01_F6060002:
+    name: DS_JDE_01_F6060002
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-05-05 08:22:07'
+    modifiedAt: '2023-05-05 08:22:07'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-05-05 08:22:07'
+        modifiedAt: '2023-05-05 08:22:07'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
