--- a/src/datasets/MD_MATL/pbt_aspects.yml
+++ b/src/datasets/MD_MATL/pbt_aspects.yml
@@ -66,7 +66,7 @@ schema:
       mappings: []
       tags: []
   - name: MIN_SHLF_RMN_LIF_DAYS_CNT
-    type: decimal(18,4)
+    type: double
     nullable: true
     metadata:
       description: ''
@@ -102,7 +102,7 @@ schema:
       tags: []
   - name: BTCH_MNG_IND
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
