JEKT-1209 Added in T134T & T023T 🔁 Modified     - Pipeline        - SAP_MD_MATL_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI     - Dataset        - MD_MATL        - DS_SAP_MARA_01

--- a/src/datasets/MD_MATL/pbt_aspects.yml
+++ b/src/datasets/MD_MATL/pbt_aspects.yml
@@ -44,7 +44,28 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: PRCHSNG_VAL_KEY_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DEL_IND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: MATL_GRP_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: INDSTR_SECTR_CD
     type: string
     nullable: true
     metadata:
@@ -66,7 +87,7 @@ schema:
       mappings: []
       tags: []
   - name: MIN_SHLF_RMN_LIF_DAYS_CNT
-    type: double
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -86,7 +107,21 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: NET_WT_MEAS
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: PROD_HIER_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PRCMT_QUAL_MGMT_IND
     type: string
     nullable: true
     metadata:
@@ -100,9 +135,23 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: LBL_TEMP_RNG
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TRSPN_GRP_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: BTCH_MNG_IND
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
@@ -128,84 +177,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: MATL_CATLG_NUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SRC_SECTR_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_PARNT_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_SUB_TYPE_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FIN_HIER_BASE_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: IMPLNT_INSTM_IND
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: KIT_IND
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DIR_PART_MRKNG_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: MATL_CAT_GRP_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PLNG_HIER3_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_SPEC_NUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_SPEC_VERS_NUM
     type: string
     nullable: true
     metadata:
@@ -219,7 +191,98 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: DOC_CHG_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CNTNR_REQ
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: OLD_MATL_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: GRS_WT
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ORDR_UNIT_PUR_UOM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CRT_BY
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CRT_ON_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LBL_TYPE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LBL_FORM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: EXTRNL_MATL_GRP
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MAX_LVL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: WT_UNIT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SIZE_DIM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PER_IN
     type: string
     nullable: true
     metadata:
@@ -228,6 +291,76 @@ schema:
       tags: []
   - name: LAST_CHG_DT_TIME_DTTM
     type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_GRP_PKGNG_MATL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: STRG_PCT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: VAL_FROM_XPLNT_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: VAL_FROM_XDC_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: INDSTR_STD_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RD_RUL_SLED
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SER_LVL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_HAZ_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: VAR_ORDR_UNT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PKGNG_MATL_TYPE
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -247,7 +380,21 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: BSC_MATL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: DOC_TYPE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DOC_PG_FMT
     type: string
     nullable: true
     metadata:
@@ -261,21 +408,14 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: MAIN_STRG_LOC
+  - name: EAN_CAT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PROD_LINE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MAKE_BUY_IN
+  - name: GTIN_VRNT
     type: string
     nullable: true
     metadata:
@@ -289,41 +429,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: FRAN_CD_DESC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TYPE_OF_MATERIAL
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: STERILE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BRAVO_MINOR_CODE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BRAVO_MINOR_CODE_DESC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: MATL_GRP_DESC
     type: string
     nullable: true
@@ -331,14 +436,14 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: SHRT_MATL_NUM
+  - name: MATL_GRP_DESC_2
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CMMDTY
+  - name: EAN_UPC_HRMZD
     type: string
     nullable: true
     metadata:
@@ -389,6 +494,13 @@ schema:
       tags: []
   - name: _l1_upt_
     type: timestamp
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _deleted_
+    type: string
     nullable: false
     metadata:
       description: ''
