--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -698,11 +698,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-12 16:16:52'
-    modifiedAt: '2023-04-28 12:23:03'
+    modifiedAt: '2023-05-05 09:19:38'
     datasets:
       inputs:
+      - datasets/DS_SAP_01_T023T
       - datasets/DS_SAP_MAKT_01
       - datasets/DS_SAP_MARA_01
+      - datasets/DS_SAP_T134T_BBA_BBL_BBN
       outputs:
       - datasets/MD_MATL
     subgraphs: []
@@ -2910,7 +2912,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-05 08:35:29'
+    modifiedAt: '2023-05-05 09:19:38'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -5175,7 +5177,7 @@ datasets:
     description: ''
     author: natkins7@its.jnj.com
     createdAt: '2023-04-05 12:03:26'
-    modifiedAt: '2023-04-13 13:48:15'
+    modifiedAt: '2023-05-05 09:01:42'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
