--- a/src/datasets/MD_MATL/pbt_aspects.yml
+++ b/src/datasets/MD_MATL/pbt_aspects.yml
@@ -422,27 +422,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: MATL_TYPE_DESC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_GRP_DESC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_GRP_DESC_2
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: EAN_UPC_HRMZD
     type: string
     nullable: true
@@ -502,6 +481,41 @@ schema:
   - name: _deleted_
     type: string
     nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_SPEC_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_SPEC_VERS_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_TYPE_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_GRP_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_GRP_DESC_2
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
