--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -776,11 +776,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-14 12:21:22'
-    modifiedAt: '2023-04-27 18:49:38'
+    modifiedAt: '2023-05-05 09:42:52'
     datasets:
       inputs:
+      - datasets/DS_SAP_01_T023T
       - datasets/DS_SAP_MAKT_01
       - datasets/DS_SAP_MARA_01
+      - datasets/DS_SAP_T134T_BBA_BBL_BBN
       outputs:
       - datasets/MD_MATL
     subgraphs: []
@@ -2912,7 +2914,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-05 09:19:38'
+    modifiedAt: '2023-05-05 09:42:43'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
