JEKT-1209 Added T134T & T023T + lookups etc. 🔁 Modified     - Pipeline        - SAP_MD_MATL_MBP     - Dataset        - MD_MATL

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -717,11 +717,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-13 09:39:22'
-    modifiedAt: '2023-04-27 18:12:33'
+    modifiedAt: '2023-05-05 09:52:58'
     datasets:
       inputs:
+      - datasets/DS_SAP_01_T023T
       - datasets/DS_SAP_MAKT_01
       - datasets/DS_SAP_MARA_MBP
+      - datasets/DS_SAP_T134T_BBA_BBL_BBN
       outputs:
       - datasets/MD_MATL
     subgraphs: []
@@ -2914,7 +2916,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-05 09:42:43'
+    modifiedAt: '2023-05-05 09:52:46'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
