JEKT-1367 🔁 Modified     - Pipeline        - SAP_01_MD_CUST_MRS_FSN_SVS_GEU     - Job        - JOB_MD_CUST

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1622,14 +1622,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/SAP_01_MD_CUST:
-    name: SAP_01_MD_CUST_MRS_
+    name: SAP_01_MD_CUST_MRS_FSN_SVS_GEU
     description: ''
     author: hgermi1@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-15 17:35:18'
-    modifiedAt: '2023-05-05 02:46:56'
+    modifiedAt: '2023-05-05 11:19:24'
     datasets:
       inputs:
       - datasets/DS_SAP_01_KNA1
@@ -7503,7 +7503,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-05-05 01:33:52'
-    modifiedAt: '2023-05-05 01:39:21'
+    modifiedAt: '2023-05-05 11:13:18'
     author: jcacere7@its.jnj.com
 functions:
   author: null
