JEKT-1367 🔁 Modified     - Job        - JOB_MD_CUST

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7496,6 +7496,7 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/SAP_01_MD_CUST
     - pipelines/JDE_01_MD_CUST
     jobClusterMode:
       clusterMode:
@@ -7503,7 +7504,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-05-05 01:33:52'
-    modifiedAt: '2023-05-05 11:13:18'
+    modifiedAt: '2023-05-05 11:22:04'
     author: jcacere7@its.jnj.com
 functions:
   author: null
