--- a/src/datasets/MD_MATL/pbt_aspects.yml
+++ b/src/datasets/MD_MATL/pbt_aspects.yml
@@ -23,6 +23,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: BRND_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: FRANCHISE_CD
     type: string
     nullable: true
@@ -493,20 +500,6 @@ schema:
       mappings: []
       tags: []
   - name: MATL_TYPE_DESC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_GRP_DESC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_GRP_DESC_2
     type: string
     nullable: true
     metadata:
