--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -717,7 +717,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-13 09:39:22'
-    modifiedAt: '2023-05-05 09:52:58'
+    modifiedAt: '2023-05-05 10:46:44'
     datasets:
       inputs:
       - datasets/DS_SAP_01_T023T
@@ -757,9 +757,10 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-14 10:44:26'
-    modifiedAt: '2023-04-27 18:08:59'
+    modifiedAt: '2023-05-05 11:27:06'
     datasets:
       inputs:
+      - datasets/DS_SAP_01_T023T
       - datasets/DS_SAP_AUSP_01
       - datasets/DS_SAP_CABN_01
       - datasets/DS_SAP_INOB_01
@@ -2916,7 +2917,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-05 09:52:46'
+    modifiedAt: '2023-05-05 10:54:53'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
