--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -736,9 +736,10 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-13 17:23:55'
-    modifiedAt: '2023-04-27 18:06:48'
+    modifiedAt: '2023-05-05 12:48:14'
     datasets:
       inputs:
+      - datasets/DS_SAP_01_T023T
       - datasets/DS_SAP_AUSP_01
       - datasets/DS_SAP_CABN_01
       - datasets/DS_SAP_INOB_01
@@ -757,7 +758,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-14 10:44:26'
-    modifiedAt: '2023-05-05 11:49:20'
+    modifiedAt: '2023-05-05 12:33:52'
     datasets:
       inputs:
       - datasets/DS_SAP_01_T023T
@@ -2917,7 +2918,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-05 11:49:20'
+    modifiedAt: '2023-05-05 12:48:13'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
