--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1658,14 +1658,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/SAP_01_MD_CUST_HCS:
-    name: SAP_01_MD_CUST_HCS
+    name: SAP_01_MD_CUST_HCS_ATL_BBN_BBL_BBA_BWI_P01_TAI
     description: ''
     author: hgermi1@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-19 22:04:42'
-    modifiedAt: '2023-05-05 11:28:25'
+    modifiedAt: '2023-05-05 12:49:08'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TVAST
