JEKT-1209 Added lookups and t tables 🔁 Modified     - Pipeline        - SAP_MD_MATL_HCS     - Dataset        - MD_MATL

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -799,11 +799,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-14 12:30:25'
-    modifiedAt: '2023-04-27 18:10:23'
+    modifiedAt: '2023-05-05 12:54:11'
     datasets:
       inputs:
+      - datasets/DS_SAP_01_T023T
       - datasets/DS_SAP_MAKT_01
       - datasets/DS_SAP_MARA_HCS
+      - datasets/DS_SAP_T134T_BBA_BBL_BBN
       outputs:
       - datasets/MD_MATL
     subgraphs: []
@@ -2918,7 +2920,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-05 12:48:13'
+    modifiedAt: '2023-05-05 12:54:11'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
