--- a/src/datasets/MD_MATL/pbt_aspects.yml
+++ b/src/datasets/MD_MATL/pbt_aspects.yml
@@ -184,20 +184,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: MATL_SPEC_NUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_SPEC_VERS_NUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: CHG_BY
     type: string
     nullable: true
@@ -495,6 +481,41 @@ schema:
   - name: _deleted_
     type: string
     nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MMS_SURGERY_TYPE_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MMS_MATL_TYPE_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MMS_FIN_CLSN_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MMS_TEMP_SENS_IND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MMS_STERILIZATION_IND
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
