JEKT-1367 🔁 Modified     - Job        - JOB_MD_CUST

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7497,6 +7497,7 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/SAP_01_MD_CUST
+    - pipelines/SAP_01_MD_CUST_HCS
     - pipelines/JDE_01_MD_CUST
     jobClusterMode:
       clusterMode:
@@ -7504,7 +7505,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-05-05 01:33:52'
-    modifiedAt: '2023-05-05 12:42:19'
+    modifiedAt: '2023-05-05 13:14:30'
     author: jcacere7@its.jnj.com
 functions:
   author: null
