--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7900,6 +7900,38 @@ jobs:
     createdAt: '2023-04-26 20:17:30'
     modifiedAt: '2023-04-27 16:54:41'
     author: smille29@its.jnj.com
+  jobs/MD_MATL_JOB:
+    name: MD_MATL_JOB
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_MD_MATL_MBP
+    - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
+    - pipelines/SAP_MD_MATL_BBL
+    - pipelines/SAP_MD_MATL_HCS
+    - pipelines/JDE_BW2_MD_MATL
+    - pipelines/SAP_MD_MATL_BBA_BBN
+    - pipelines/SAP_MD_MATL_TAI
+    - pipelines/JDE_MD_MATL
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-05 13:05:54'
+    modifiedAt: '2023-05-05 13:21:08'
+    author: natkins7@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
