JEKT-1367 ❇️ New     - Job        - JOB_MD_CUST_HM2

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7507,6 +7507,31 @@ jobs:
     createdAt: '2023-05-05 01:33:52'
     modifiedAt: '2023-05-05 13:15:51'
     author: jcacere7@its.jnj.com
+  jobs/JOB_MD_CUST_HM2:
+    name: JOB_MD_CUST_HM2
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_01_MD_SHIP_SVS
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-05 13:19:19'
+    modifiedAt: '2023-05-05 13:19:57'
+    author: jcacere7@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
