--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -358,14 +358,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_DELV_1:
-    name: MD_DELV_1_bba_btb_latam_btb_na_hcs_mrs
-    description: Mapping pipeline  ['bba', 'btb_latam', 'btb_na', 'hcs', 'mrs']
+    name: SAP_MD_DELV_BBA_BBL_BBN_HCS_MRS
+    description: Mapping pipeline  ['bba', 'bbl', 'bbn', 'hcs', 'mrs']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-04-27 04:26:50'
+    modifiedAt: '2023-05-05 13:55:00'
     datasets:
       inputs: []
       outputs:
@@ -500,7 +500,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-05 12:25:32'
+    modifiedAt: '2023-05-05 13:48:29'
     datasets:
       inputs: []
       outputs:
