JEKT-1395 ❇️ New     - Pipeline        - SAP_01_MD_SLS_ORDR_HCS
🔁 Modified
    - Dataset
       - MD_SLS_ORDR
       - DS_SAP_01_VBAK

--- a/src/datasets/MD_SLS_ORDR/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR/pbt_aspects.yml
@@ -835,3 +835,10 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: CLS_OF_TRD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
