--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1752,6 +1752,38 @@ pipelines:
       - datasets/MD_SLS_ORDR
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_01_MD_SLS_ORDR_HCS:
+    name: SAP_01_MD_SLS_ORDR_HCS
+    description: ''
+    author: lsorarra@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-05 13:15:30'
+    modifiedAt: '2023-05-05 13:35:23'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_T001
+      - datasets/DS_SAP_01_T176T
+      - datasets/DS_SAP_01_TSPAT
+      - datasets/DS_SAP_01_TVAKT
+      - datasets/DS_SAP_01_TVAU
+      - datasets/DS_SAP_01_TVAUT
+      - datasets/DS_SAP_01_TVFST
+      - datasets/DS_SAP_01_TVKOT
+      - datasets/DS_SAP_01_TVLST
+      - datasets/DS_SAP_01_TVSBT
+      - datasets/DS_SAP_01_TVTWT
+      - datasets/DS_SAP_01_TVV1T
+      - datasets/DS_SAP_01_TVV2T
+      - datasets/DS_SAP_01_TVV4T
+      - datasets/DS_SAP_01_TVV5T
+      - datasets/DS_SAP_01_VBAK
+      - datasets/DS_SAP_01_VBUK
+      outputs:
+      - datasets/MD_SLS_ORDR
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -1893,7 +1925,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-05 12:27:38'
+    modifiedAt: '2023-05-05 13:35:22'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -4968,7 +5000,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-03-31 18:51:09'
-    modifiedAt: '2023-05-05 13:01:49'
+    modifiedAt: '2023-05-05 13:21:09'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
